- fixed title align issue (#791)
edited basic.scss file

--- a/src/style/basic.scss
+++ b/src/style/basic.scss
@@ -6,6 +6,7 @@
 
   h1 {
     font-size: 30px;
+    text-align: center;
   }
   
   h2 {
